<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <TextView
        android:id="@+id/detailLocationTitle"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:text="@string/location_title"/>

    <com.android.volley.toolbox.NetworkImageView
        android:id="@+id/detailLocationImage"
        android:layout_width="match_parent"
        android:layout_weight="8"
        android:layout_height="0dp"/>

    <TextView
        android:id="@+id/detailTimeStamp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:text="@string/timestamp"/>

    <TextView
        android:id="@+id/locationDescription"
        android:layout_width="match_parent"
        android:layout_weight="3"
        android:layout_height="0dp"
        android:text="@string/description"/>
</LinearLayout>